@@ -4,10 +4,10 @@
 	"name": "DHParser-EBNF",
 	"patterns": [
 		{ "include": "#directive" },
-		{ "include": "#string-double" },
-		{ "include": "#string-single"},
+		{ "include": "#string" },
 		{ "include": "#regex" },
 		{ "include": "#comment" },
+		{ "include": "#symbol" },
 		{ "include": "#section-marker" },
 		{ "include": "#paren-expression" },
 		{ "include": "#prefix-operator" },
@@ -21,12 +21,12 @@
 				"match": "^[\\t ]*@[\\t ]*(?:whitespace|comment|literalws|tokens|drop|\\w*?_(?:error|skip|resume))"
 			}]
 		},
-		"string-double": {
+		"string": {
 			"name": "string.quoted",
 			"begin": "[\"']",
 			"end": "[\"']",
 			"patterns": [{
-					"name": "constant.character.escape",
+					"name": "string.quoted",
 					"match": "\\\\."
 			}]
 		},
@@ -35,7 +35,7 @@
 			"begin": "/",
 			"end": "/",
 			"patterns": [{
-					"name": "constant.character.escape",
+					"name": "string.regexp",
 					"match": "\\\\."
 			}]
 		},
@@ -46,15 +46,22 @@
 				"match": "#(?!:).*$"
 			}]
 		},
-		"section-marker": {
-			"name": "section-marker",
+		"symbol": {
+			"name": "symbol",
 			"patterns": [{
-				"name": "comment.block.documentation",
+				"name": "entity.name.tag",
+				"match": "^\\s*\\w+\\s*(?==)"
+			}]
+		},
+		"section-marker": {
+			"name": "section.marker",
+			"patterns": [{
+				"name": "entity.name.section",
 				"match": "#:.*$"
 			}]
 		},
 		"paren-expression": {
-			"name": "paren-expression",
+			"name": "paren.expression",
 			"begin": "[\\(\\[\\{]",
 			"end": "[\\)\\]\\}]|\\}+",
 			"beginCaptures": {
@@ -65,21 +72,21 @@
 		    }
 		},
 		"prefix-operator": {
-			"name": "prefix-operator",
+			"name": "prefix.operator",
 			"patterns": [{
 				"name": "keyword.operator",
 				"match": "-!|-&|::|[§!&:]"
 			}]
 		},
 		"infix-operator": {
-			"name": "infix-operator",
+			"name": "infix.operator",
 			"patterns": [{
 				"name": "keyword.control",
 				"match": "[|,]"
 			}]
 		},
 		"whitespace-operator": {
-			"name": "whitespace-operator",
+			"name": "whitespace.operator",
 			"patterns": [{
 				"name": "keyword.other",
 				"match": "~"
